docs: add measured evidence for the load test findings